# MINT

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  AGENTS_LOG.md  AGENT_SYSTEM_PROMPT.md  ATTRIBUTION.md  AUDIT_COMPLET.md  AUDIT_REPORT.md  CLAUDE.md  CLAUDE.md.bak  CONTRIBUTING.md  DISTRIBUTION_EMBEDDED_STRATEGY_V1.md  DefinitionOfDone.md  LEGAL_RELEASE_CHECK.md  LICENSE  MINT_v1_Audit_Profond.docx  MOTION_INTERACTION_AUDIT.md  NAVIGATION_AUDIT.md  PLAN.md  PRIVACY.md  README.md  SECURITY.md  SOT.md  TEST_ROADMAP.md  Walkthrough.md  autoresearch-coach-results.tsv  autoresearch-i18n-results.tsv  autoresearch-quality-results.tsv  lefthook.yml  repro_enum.py  rules.md  test_anonymous_chat.db  vercel.json
services/backend/: .dockerignore  .env.example  .gitignore  ANALYTICS_USAGE.md  Dockerfile  Procfile  README.md  alembic.ini  coverage.xml  docker-compose.yml  fly.toml  output.txt  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
services/backend/alembic/: env.py
services/backend/alembic/versions/: 2026_04_07_voice_cursor_fields.py  29_01_envelope_encryption.py  29_02_consents_granular.py  29_03_fact_key_ttl_purpose.py  29_04_drop_auto_confirmed.py  29_05_magic_link_tokens.py  5adaafbee2b6_w13_indexes_audit_created_at_and_.py  5f7922bff82b_merge_p11_and_p15.py  d73dcc3968c9_baseline_14_models.py  p10_scenarios_table.py  p11_profile_user_id_index.py  p11_recent_gravity_events.py  p12_add_birth_date.py  p13_add_password_changed_at.py  p14_commitment_devices.py  p15_earmark_tags.py  p28_document_memory.py  p6_household_billing.py  p7_external_data_sources.py  p8_token_blacklist.py  p9_documents_table.py
services/backend/app/: main.py
services/backend/app/constants/: __init__.py  social_insurance.py
services/backend/app/core/: auth.py  config.py  database.py  logging_config.py  rate_limit.py  redis_client.py
services/backend/app/middleware/: encryption_context.py
services/backend/app/models/: __init__.py  analytics_event.py  anonymous_session.py  audit_event.py  auth_security.py  banking_consent.py  billing.py  coach_insight.py  commitment.py  consent.py  dek_vault.py  document.py  document_audit.py  document_memory.py  earmark.py  external_data_source.py  household.py  magic_link_token.py  profile_model.py  regulatory_parameter.py  scenario.py  session_model.py  snapshot.py  token_blacklist.py  user.py
services/backend/app/routes/: wizard.py
services/backend/app/schemas/: analytics.py  anonymous_chat.py  arbitrage.py  assurances.py  audit.py  auth.py  bank_import.py  billing.py  coach.py  coach_chat.py  coaching.py  common.py  commune.py  confidence.py  consent_receipt.py  debt_prevention.py  disability_gap.py  document.py  document_parser.py  document_scan.py  document_understanding.py  educational_content.py  enhanced_confidence.py  expat.py  family.py  fiscal.py  fri.py  household.py  independants.py  job_comparison.py  life_events.py  lpp_deep.py  mortgage.py  next_steps.py  notifications.py  onboarding.py  open_banking.py  partner.py  pillar_3a_deep.py  precision.py  (+16 more)
services/backend/app/services/: anomaly_detection_service.py  audit_service.py  auth_admin_service.py  auth_security_service.py  auth_service.py  bank_import_service.py  billing_service.py  coaching_engine.py  coverage_checklist_service.py  disability_gap_service.py  divorce_simulator.py  document_memory_service.py  document_pdf_preflight.py  document_render_mode.py  document_signatures.yaml  document_stream.py  document_third_party.py  (+21 more)
services/backend/education_inserts/: README.md  q_3a_accounts_count.md  q_3a_annual_amount.md  q_3a_annual_amount_de.md  q_avs_gaps.md  q_canton_move.md  q_concubinage.md  q_disability_ijm_vs_ai.md  q_disability_ijm_vs_ai_de.md  q_disability_safety_net.md  q_disability_safety_net_de.md  q_divorce.md  q_donation.md  q_emergency_fund.md  q_financial_stress_check.md  q_first_job.md  q_has_3a.md  q_has_3a_de.md  q_has_investments.md  q_has_leasing.md  q_has_leasing_de.md  q_has_pension_fund_de.md  q_housing_sale.md  q_housing_status.md  q_lpp_buyback_available.md  q_mariage.md  q_mortgage_type.md  q_mortgage_type_de.md  q_naissance.md  q_real_estate_project.md  q_retirement.md
services/backend/migrations/: 003_pgvector.sql
services/backend/mint_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/backend/scripts/: bench_coach_doctrine.py  check_llm_direct_calls.py  embed_corpus.py  generate_adversarial_fixtures.py  ingest_corpus.py  ingest_educational_corpus.py  migrate_evidence_text_encrypt.py  railway_pre_deploy_migrate.py
services/backend/tests/: conftest.py  test_admin_audit.py  test_agent_loop.py  test_allocation_annuelle.py  test_analytics.py  test_anomaly_detection.py  test_anonymous_chat.py  test_anonymous_chat_facts_wiring.py  test_anonymous_prompt_v2.py  test_archetype_detection.py  test_assurances.py  test_audit_service.py  test_auth.py  test_auth_security_service.py  test_bank_import.py  test_bank_statement.py  test_batch_profiles.py  test_billing.py  test_billing_e2e.py  test_biography_coach_guardrails.py  test_budget_crud.py  test_calendrier_retraits.py  test_cantonal_knowledge.py  test_chiffre_choc.py  test_claude_coach.py  test_coach_chat_endpoint.py  test_coach_chat_persistence_gate.py  test_coach_doctrine_eval.py  test_coach_firstjob.py  test_coach_intelligence.py  test_coach_memory_roundtrip.py  test_coach_narrative.py  test_coach_tools.py  test_coach_tools_categories.py  test_coaching.py  test_commitment_devices.py  test_commune_service.py  test_compliance_channel_coverage.py  test_compliance_guard.py  test_compliance_stress.py  (+120 more)
tools/mcp/mint-tools/: README.md  pyproject.toml  requirements.txt  server.py
(+3388 files in other folders)
