[project]
name = "mint-backend"
version = "0.1.0"
description = "Mint Backend Services"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.7",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "email-validator>=2.0.0",
    "slowapi>=0.1.9",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=22.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]
rag = [
    "chromadb>=0.5.5",
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
]
docling = [
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.7",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
