[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mint-backend"
version = "0.1.0"
description = "Mint Backend Services"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0,<5.0",
    "email-validator>=2.0.0,<3.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "alembic>=1.13.0,<2.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "anthropic>=0.40.0,<1.0.0",
    # Phase 31 OBS-03 — pinned 2.53.0 for reliable auto-read of sentry-trace
    # + baggage headers; upgrade requires re-running
    # tools/simulator/trace_round_trip_test.sh against staging to confirm
    # cross-project link behaviour with sentry-flutter 9.14.0.
    "sentry-sdk[fastapi]==2.53.0",
    "defusedxml>=0.7.0,<1.0.0",
    "redis>=5.0,<6.0",
    "pymupdf>=1.24,<2.0",
    "pyyaml>=6.0,<7.0",
    "sse-starlette>=2.1,<3.0",
    "cryptography>=42,<47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
    "fakeredis>=2.20.0",
]
rag = [
    "chromadb>=0.5.5",
    "anthropic>=0.40.0,<1.0.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
]
docling = [
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.7",
]
kms = [
    # Used by phase 29-01 envelope encryption AND phase 29-06 Bedrock EU
    # client (eu-central-1 inference). Single boto3 install covers both.
    "boto3>=1.34,<2.0",
]
privacy = [
    # PRIV-03 / Phase 29. Optional extra: production installs require
    # Python ≥ 3.10 (presidio + spaCy). Dev environments on 3.9 fall back
    # to the regex scrubber automatically.
    "presidio-analyzer>=2.2,<3.0",
    "presidio-anonymizer>=2.2,<3.0",
    "spacy>=3.7,<4.0",
    "pyffx>=0.3,<1.0",
    # PRIV-07 / Phase 29-06: two-stage image PII masking. Tesseract
    # binary is installed at the Dockerfile layer (+tessdata fra+deu+ita+eng).
    "pytesseract>=0.3.10",
    "Pillow>=10.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E402"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
